packages/webassemblyjs/test/fixtures/type-errors/select-too-few/exec.tjs
it("should throw an error during instantiation when type checking fails", () => {
  assert.throws(
    () => WebAssembly.instantiateFromSource(watmodule),
    "Stack contains too few arguments for select"
  );
});
